--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     sdk: flutter
   bloc: ^6.1.1
   flutter_bloc: ^6.1.1
+  flutter_localizations: # Add this line
+    sdk: flutter    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -29,10 +31,12 @@ dependencies:
   http: ^0.12.0+2
 
 dev_dependencies:
-  flutter_test:
+
+  test: any
+  flutter_driver:
     sdk: flutter
-
-
+  # flutter_localizations:
+  #   sdk: flutter
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
